# switchboard-plug-display

./: .travis.yml  CMakeLists.txt  INSTALL  Makefile  README.md  gnome-desktop-3.0.vapi  main.vala  meson.build
.github/workflows/: gettext.yml  main.yml
data/: Display.css  Filters.css  display.appdata.xml.in  display.gresource.xml  display.gschema.xml  display.metainfo.xml.in  io.elementary.switchboard-plug-display.appdata.xml.in  io.elementary.switchboard.display.appdata.xml.in  io.elementary.switchboard.display.gresource.xml  meson.build  pantheon-plug-display.desktop
debian/: changelog  control  copyright  rules
po/: POTFILES  aa.po  ae.po  af.po  am.po  ar.po  ast.po  av.po  az.po  ba.po  be.po  bg.po  bn.po  br.po  bs.po  ca.po  ckb.po  cr.po  cs.po  cu.po  cv.po  cy.po  da.po  de.po  display-plug.pot  dv.po  dz.po  ee.po  el.po  en_AU.po  en_CA.po  en_GB.po  eo.po  es.po  et.po  eu.po  fa.po  fi.po  fo.po  fr.po  (+88 more)
po/extra/: POTFILES  aa.po  ab.po  ae.po  af.po  ak.po  am.po  an.po  ar.po  as.po  ast.po  av.po  ay.po  az.po  ba.po  be.po  bg.po  bh.po  bi.po  bm.po  bn.po  bo.po  br.po  bs.po  ca.po  ce.po  ch.po  ckb.po  co.po  cr.po  cs.po  cu.po  cv.po  cy.po  da.po  de.po  dv.po  dz.po  ee.po  el.po  (+159 more)
src/: CMakeLists.txt  Configuration.vala  DisplayPlug.vala  DisplayPopover.vala  DisplayWidget.vala  DisplayWindow.vala  DisplaysOverlay.vala  DisplaysView.vala  MirrorDisplay.vala  Monitor.vala  OutputList.vala  SettingsDaemon.vala  TouchscreenSettings.vala  Utils.vala  meson.build
src/Interfaces/: GalaDBus.vala  MutterDisplayConfig.vala  NightLightManager.vala  SensorManager.vala
src/Objects/: DisplayObject.vala  ModeObject.vala  Monitor.vala  MonitorConfigurationService.vala  MonitorLayoutManager.vala  MonitorLayoutProfile.vala  MonitorManager.vala  MonitorMode.vala  MonitorObject.vala  MutterDisplayConfig.vala  VirtualMonitor.vala
src/Views/: Display.vala  DisplaysView.vala  FiltersView.vala  Layout.vala  NightLightView.vala  NightShift.vala
src/Widgets/: DisplayWidget.vala  DisplayWindow.vala  DisplaysOverlay.vala  MirrorDisplay.vala  MonitorLabel.vala  MonitorsList.vala  MonitorsListWidget.vala  RefreshRateDropDown.vala  ResolutionDropDown.vala  RotationDropDown.vala  ScaleDropDown.vala
